force-app/main/default/objects/Renewal_by_CC_pre_approved_migrations__mdt/Renewal_by_CC_pre_approved_migrations__mdt.object-meta.xml
<CustomObject>
    <label>Renewal by CC pre-approved migration</label>
    <pluralLabel>Renewal by CC pre-approved migrations</pluralLabel>
</CustomObject>