force-app/main/default/objects/Renewal_by_CC_pre_approved_migrations__mdt/fields/Current_Base_Package__c.field-meta.xml
<CustomField>
    <fullName>Current_Base_Package__c</fullName>
    <label>Current Base Package</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>