force-app/main/default/objects/Renewal_by_CC_pre_approved_migrations__mdt/fields/New_Base_Package__c.field-meta.xml
<CustomField>
    <fullName>New_Base_Package__c</fullName>
    <label>New Base Package</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>