force-app/main/default/objects/Renewal_by_CC_pre_approved_migrations__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>